--- a/themes/underscore-enfant/sass/style.scss
+++ b/themes/underscore-enfant/sass/style.scss
@@ -130,6 +130,11 @@ img {
 
 }
 
+.site-main img:nth-child(1){
+
+	width: 100%;
+}
+
 @keyframes fade-zoom {
 	0% {
 		transform: scale(0);
@@ -201,7 +206,7 @@ a:hover {
 
 }
 
-a::after {
+.menu-menu-1-container a::after {
 	content: '';
 	display: block;
 	width: 0;
@@ -210,10 +215,21 @@ a::after {
 	transition: width .3s;
 }
 
-a:hover::after {
+.menu-menu-1-container a:hover::after {
 	width: 100%;
 	transition: width .3s;
 
+}
+
+.menu-menu-1-container{
+
+	margin-bottom: 40px;
+	margin-top: 40px;
+}
+
+.site-title a{
+
+	display: none;
 }
 
 button,
