--- a/themes/underscore-enfant/sass/style.scss
+++ b/themes/underscore-enfant/sass/style.scss
@@ -60,22 +60,41 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Elements
 --------------------------------------------------------------*/
 //@import "elements/elements";
-.menu-toggle {
 
-	display: none;
+body{
+
+	background-color: #222629;
+}
+body,a {
+
+	color: #edf5e1;
 }
 
-.flex:nth-of-type(2) {
-
-	margin: -222px 0px 0px 400px;
-
-}
-
-.flex:nth-of-type(3) {
-
-	margin: -222px 0px 0px 800px;
+.menu-menu-1-container{
+color: #edf5e1;
 
 }
+
+.texte{
+
+	width: 200%;
+}
+
+.texte p{
+
+	font-size: 0.8em;
+}
+
+.texte a {
+
+	text-decoration: none;
+}
+
+.wrap{
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+}
+
 
 .conteneur {
 
@@ -85,7 +104,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 .texte {
 
-	margin-top: -25px;
+	padding-left: 15px;
 }
 
 .image {
@@ -188,12 +207,12 @@ img {
 }
 
 .menu-menu-1-container ul li a {
-	color: rgb(54, 54, 54);
+	color: rgb(255, 255, 255);
 	font-weight: bold;
 }
 
 .menu-menu-1-container ul li {
-	color: rgb(54, 54, 54);
+	color: rgb(255, 255, 255);
 }
 
 a {
@@ -214,7 +233,7 @@ a:hover {
 	display: block;
 	width: 0;
 	height: 2px;
-	background: rgb(54, 54, 54);
+	background: rgb(255, 255, 255);
 	transition: width .3s;
 }
 
@@ -256,22 +275,68 @@ input[type="submit"] {
 
 }
 
+#coche, #burger{
+
+	display: none;
+}
+
+
+
 @media screen and (max-width: 605px) {
 
-	.toggler:checked ~ #site-navigation{
-		display: none;
+
+	 #burger{
+
+		display: block;
+		cursor: pointer;
+	
 	}
 
+#coche:checked ~ .menu-menu-1-container{
+	transform : translateY(0);
+}
+
+.fas{
+	font-size: 2rem;
+	
+}
+#burger{
+	font-size: 2rem;
+	position: absolute;
+    left: 50px;
+    top: 100px;
+}
+
+.menu-menu-1-container {
+	transform : translateY(-300px);
+	transition : transform 1s;
+}
+
+
+#coche:checked ~ #site-navigation{
+	height:500px;
+	
+}
+
+#site-navigation{
+
+	//height:100px;
+	transition : transform 1s;
+}
+
+	
 	.menu-menu-1-container ul {
 		display: flex;
 		flex-direction: column;
-		width: 100%;
+		width: 25%;
 		padding: 0;
 		margin: 0;
+		text-align: center;
 	}
 
 	.menu-menu-1-container ul li {
 		text-align: center;
+		margin-bottom: 15px;
 	}
 	
 	.menu-menu-1-container a::after {
@@ -281,6 +346,7 @@ input[type="submit"] {
 		height: 2px;
 		background: rgb(255, 255, 255)
 	}
+
 
 
 }
