--- a/themes/underscore-enfant/style.css
+++ b/themes/underscore-enfant/style.css
@@ -52,16 +52,35 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
-.menu-toggle {
-  display: none;
+body {
+  background-color: #222629;
 }
 
-.flex:nth-of-type(2) {
-  margin: -222px 0px 0px 400px;
+body, a {
+  color: #edf5e1;
 }
 
-.flex:nth-of-type(3) {
-  margin: -222px 0px 0px 800px;
+.menu-menu-1-container {
+  color: #edf5e1;
+}
+
+.texte {
+  width: 200%;
+}
+
+.texte p {
+  font-size: 0.8em;
+}
+
+.texte a {
+  text-decoration: none;
+}
+
+.wrap {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
 }
 
 .conteneur {
@@ -72,7 +91,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 }
 
 .texte {
-  margin-top: -25px;
+  padding-left: 15px;
 }
 
 .image {
@@ -188,12 +207,12 @@ img {
 }
 
 .menu-menu-1-container ul li a {
-  color: #363636;
+  color: white;
   font-weight: bold;
 }
 
 .menu-menu-1-container ul li {
-  color: #363636;
+  color: white;
 }
 
 a {
@@ -210,7 +229,7 @@ a:hover {
   display: block;
   width: 0;
   height: 2px;
-  background: #363636;
+  background: white;
   -webkit-transition: width .3s;
   transition: width .3s;
 }
@@ -251,9 +270,44 @@ input[type="submit"] {
   transition: all 0.2s;
 }
 
+#coche, #burger {
+  display: none;
+}
+
 @media screen and (max-width: 605px) {
-  .toggler:checked ~ #site-navigation {
-    display: none;
+  #burger {
+    display: block;
+    cursor: pointer;
+  }
+  #coche:checked ~ .menu-menu-1-container {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  .fas {
+    font-size: 2rem;
+  }
+  #burger {
+    font-size: 2rem;
+    position: absolute;
+    left: 50px;
+    top: 100px;
+  }
+  .menu-menu-1-container {
+    -webkit-transform: translateY(-300px);
+            transform: translateY(-300px);
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
+    transition: transform 1s;
+    transition: transform 1s, -webkit-transform 1s;
+  }
+  #coche:checked ~ #site-navigation {
+    height: 500px;
+  }
+  #site-navigation {
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
+    transition: transform 1s;
+    transition: transform 1s, -webkit-transform 1s;
   }
   .menu-menu-1-container ul {
     display: -webkit-box;
@@ -263,12 +317,14 @@ input[type="submit"] {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 100%;
+    width: 25%;
     padding: 0;
     margin: 0;
+    text-align: center;
   }
   .menu-menu-1-container ul li {
     text-align: center;
+    margin-bottom: 15px;
   }
   .menu-menu-1-container a::after {
     content: '';
