Organisation des fichiers sass et debut de la grille des evenements en scss

--- a/themes/underscore-enfant/style.css
+++ b/themes/underscore-enfant/style.css
@@ -389,6 +389,10 @@ input[type="submit"] {
       grid-template-rows: 1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr;
 }
 
+.zeuGrille {
+  border: 1px solid white;
+}
+
 /*--------------------------------------------------------------
 # Infinite scroll
 --------------------------------------------------------------*/
