--- a/themes/underscore-enfant/sass/site/grilles/_grille_evenements.scss
+++ b/themes/underscore-enfant/sass/site/grilles/_grille_evenements.scss
@@ -3,3 +3,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr;
 }
+
+.zeuGrille{
+
+    border: 1px solid white;
+}
