--- a/themes/underscore-enfant/sass/style.scss
+++ b/themes/underscore-enfant/sass/style.scss
@@ -43,8 +43,20 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	## Captions
 	## Galleries
 --------------------------------------------------------------*/
-//@import "variables-site/variables-site";
-//@import "mixins/mixins-master";
+/*--------------------------------------------------------------
+# Variables
+--------------------------------------------------------------*/
+@import "_variable.scss";
+
+/*--------------------------------------------------------------
+# Mixins
+--------------------------------------------------------------*/
+@import "_mixins.scss";
+
+/*--------------------------------------------------------------
+# Extends
+--------------------------------------------------------------*/
+@import "_extend.scss";
 
 /*--------------------------------------------------------------
 # Normalize
@@ -54,131 +66,12 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-//@import "typography/typography";
+@import "_typography.scss";
 
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
-//@import "elements/elements";
-
-body{
-
-	background-color: #222629;
-}
-body,a {
-
-	color: #edf5e1;
-}
-
-.menu-menu-1-container{
-color: #edf5e1;
-
-}
-
-.texte{
-
-	width: 200%;
-}
-
-.texte p{
-
-	font-size: 0.8em;
-}
-
-.texte a {
-
-	text-decoration: none;
-}
-
-.wrap{
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-}
-
-
-.conteneur {
-
-	display: inline-grid;
-	grid-template-columns: 20% 33%;
-}
-
-.texte {
-
-	padding-left: 15px;
-}
-
-.image {
-
-	padding-left: 15px;
-}
-
-
-
-.site-description {
-
-	display: none;
-}
-
-img {
-
-	animation: fade-in 4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-}
-
-
-@keyframes fade-in {
-	0% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-	}
-}
-
-
-
-
-
-
-.grilleCss>img {
-
-	height: 100vh;
-	width: 100%;
-
-	background-position: center;
-	background-repeat: no-repeat;
-	display: flex;
-	animation: fade-zoom 3s ease-out normal backwards;
-
-}
-
-.site-main img:nth-child(1) {
-
-	width: 100%;
-}
-
-@keyframes fade-zoom {
-	0% {
-		transform: scale(0);
-	}
-
-	70% {
-		transform: scale(1.1);
-	}
-
-	100% {
-		transform: scale(1);
-	}
-}
-
-.flex h4 {
-
-	font-size: 0.6em;
-}
-
-
-
-
+@import "_elements.scss";
 
 /*--------------------------------------------------------------
 # Forms
@@ -189,167 +82,6 @@ img {
 # Navigation
 --------------------------------------------------------------*/
 //@import "navigation/navigation";
-
-
-.main-navigation {
-	display: flex;
-	width: 100%;
-	justify-content: space-between;
-}
-
-.menu-menu-1-container {
-	display: flex;
-	list-style: none;
-	font-size: 1rem;
-	align-items: center;
-	width: 100%;
-	justify-content: space-evenly;
-}
-
-.menu-menu-1-container ul li a {
-	color: rgb(255, 255, 255);
-	font-weight: bold;
-}
-
-.menu-menu-1-container ul li {
-	color: rgb(255, 255, 255);
-}
-
-a {
-
-	padding-right: 35px;
-	opacity: 0.5;
-
-}
-
-a:hover {
-
-	opacity: 1;
-
-}
-
-.menu-menu-1-container a::after {
-	content: '';
-	display: block;
-	width: 0;
-	height: 2px;
-	background: rgb(255, 255, 255);
-	transition: width .3s;
-}
-
-.menu-menu-1-container a:hover::after {
-	width: 100%;
-	transition: width .3s;
-
-}
-
-.menu-menu-1-container {
-
-	margin-bottom: 40px;
-	margin-top: 40px;
-}
-
-.site-title a {
-
-	display: none;
-}
-
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-
-	display: inline-block;
-	padding: 0.3em 1.2em;
-	margin: 0 0.1em 0.1em 0;
-	border: 0.16em solid rgba(255, 255, 255, 0);
-	border-radius: 2em;
-	box-sizing: border-box;
-	text-decoration: none;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 300;
-	color: rgb(43, 43, 43);
-	text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-	text-align: center;
-	transition: all 0.2s;
-
-}
-
-#coche, #burger{
-
-	display: none;
-}
-
-
-
-@media screen and (max-width: 605px) {
-
-
-	 #burger{
-
-		display: block;
-		cursor: pointer;
-	
-	}
-
-#coche:checked ~ .menu-menu-1-container{
-	transform : translateY(0);
-}
-
-.fas{
-	font-size: 2rem;
-	
-}
-#burger{
-	font-size: 2rem;
-	position: absolute;
-    left: 50px;
-    top: 100px;
-}
-
-.menu-menu-1-container {
-	transform : translateY(-300px);
-	transition : transform 1s;
-}
-
-#coche:checked ~ #site-navigation{
-	height:300px;
-	
-}
-
-#site-navigation{
-	
-
-	//height:100px;
-	transition : transform 1s;
-}
-
-	
-	.menu-menu-1-container ul {
-		display: flex;
-		flex-direction: column;
-		width: 25%;
-		padding: 0;
-		margin: 0;
-		text-align: center;
-	}
-
-	.menu-menu-1-container ul li {
-		text-align: center;
-		margin-bottom: 15px;
-	}
-	
-	.menu-menu-1-container a::after {
-		content: '';
-		display: block;
-		width: 0;
-		height: 2px;
-		background: rgb(255, 255, 255)
-	}
-
-
-
-}
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -385,3 +117,18 @@ input[type="submit"] {
 # Media
 --------------------------------------------------------------*/
 //@import "media/media";
+
+/*--------------------------------------------------------------
+# Entete
+--------------------------------------------------------------*/
+@import "_entete.scss";
+
+/*--------------------------------------------------------------
+# Animations
+--------------------------------------------------------------*/
+@import "_animations.scss";
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+@import "_footer.scss";
