Utilisation des variables

--- a/themes/underscore-enfant/sass/_elements.scss
+++ b/themes/underscore-enfant/sass/_elements.scss
@@ -14,12 +14,17 @@ body,a {
 
 a:visited{
 
-	color:  #edf5e1;
+	color:  $couleurVisited;
 }
 
 a:hover{
 
-	color:  #edf5e1;
+	color:  $couleurHover;
+}
+
+
+a:active{
+	color: $couleurActive;
 }
 
 
