Gestion de la navigation et de entete en scss et typographie et style general

--- a/themes/underscore-enfant/sass/style.scss
+++ b/themes/underscore-enfant/sass/style.scss
@@ -81,7 +81,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-//@import "navigation/navigation";
+@import "_navigation.scss";
 
 /*--------------------------------------------------------------
 # Accessibility
