Gestion des mixins et stylisation du tableau

--- a/themes/underscore-enfant/sass/site/grilles/_grille_evenements.scss
+++ b/themes/underscore-enfant/sass/site/grilles/_grille_evenements.scss
@@ -1,5 +1,19 @@
 .zeuGrille{
+    @include bordure;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr;
+    a{
+        text-decoration: none;
+    }
+}
+
+.mois{
+    
+    @include bordureBis;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    text-align: center;
+
 }
