--- a/themes/underscore-enfant/style.css
+++ b/themes/underscore-enfant/style.css
@@ -233,12 +233,29 @@ input[type="submit"] {
 ## Grille événements
 --------------------------------------------------------------*/
 .zeuGrille {
+  border: 2px solid white;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: 1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr;
       grid-template-rows: 1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr;
+}
+
+.zeuGrille a {
+  text-decoration: none;
+}
+
+.mois {
+  border: 2px solid white;
+  border-bottom: 0px solid white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  text-align: center;
 }
 
 /*--------------------------------------------------------------
