--- a/themes/underscore-enfant/sass/_elements.scss
+++ b/themes/underscore-enfant/sass/_elements.scss
@@ -91,10 +91,23 @@ grid-template-columns: 1fr 1fr 1fr;
 	width: 100%;
 }
 
-
 .flex h4 {
 
 	font-size: 0.6em;
 }
+
+.tuiles {
+	display: flex;
+	width: 100%;
+  }
+
+  .tuile {
+	animation: 1s ease 0s pulsation infinite;
+	background: $tuile-bg;
+	border-radius: 5px;
+	margin: 0 auto;
+	width: 25%;
+	height: 100px;
+  }
 
 
