Loop en scss réalisé et terminée

--- a/themes/underscore-enfant/sass/_animations.scss
+++ b/themes/underscore-enfant/sass/_animations.scss
@@ -9,7 +9,16 @@
 	}
 }
 
-
+@for $i from 1 through 3 {
+	.tuile {
+	  
+	  &:nth-child(#{$i}) {
+		
+		animation-delay: $i * (1s / 3);
+	  }
+	}
+  }
+  
 @keyframes fade-zoom {
 	0% {
 		transform: scale(0);
@@ -23,3 +32,21 @@
 		transform: scale(1);
 	}
 }
+
+@keyframes pulsation {
+	0% {
+	  background: $tuile-bg;
+	  transform: scale(1);
+	}
+	
+	25% {
+	  background: darken($tuile-bg, 10%);
+	  transform: scale(1.035);
+	}
+	
+	50% {
+		
+	  background: $tuile-bg;
+	  transform: scale(1);
+	}
+  }
