--- a/themes/underscore-enfant/style.css
+++ b/themes/underscore-enfant/style.css
@@ -98,8 +98,8 @@ a:active {
 .wrap {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
 }
 
 .conteneur {
@@ -121,9 +121,9 @@ a:active {
   display: none;
 }
 
-img {
-  -webkit-animation: fade-in 4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-          animation: fade-in 4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+.attachment-full {
+  -webkit-animation: fade-zoom 3s both;
+          animation: fade-zoom 3s both;
 }
 
 .grilleCss > img {
@@ -144,6 +144,23 @@ img {
 
 .flex h4 {
   font-size: 0.6em;
+}
+
+.tuiles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.tuile {
+  -webkit-animation: 1s ease 0s pulsation infinite;
+          animation: 1s ease 0s pulsation infinite;
+  background: #00ff00;
+  border-radius: 5px;
+  margin: 0 auto;
+  width: 25%;
+  height: 100px;
 }
 
 /*--------------------------------------------------------------
@@ -233,12 +250,29 @@ input[type="submit"] {
 ## Grille événements
 --------------------------------------------------------------*/
 .zeuGrille {
+  border: 2px solid white;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: 1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr;
       grid-template-rows: 1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr,1fr;
+}
+
+.zeuGrille a {
+  text-decoration: none;
+}
+
+.mois {
+  border: 2px solid white;
+  border-bottom: 0px solid white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  text-align: center;
 }
 
 /*--------------------------------------------------------------
@@ -393,6 +427,21 @@ a:hover {
   }
 }
 
+.tuile:nth-child(1) {
+  -webkit-animation-delay: 0.33333s;
+          animation-delay: 0.33333s;
+}
+
+.tuile:nth-child(2) {
+  -webkit-animation-delay: 0.66667s;
+          animation-delay: 0.66667s;
+}
+
+.tuile:nth-child(3) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
 @-webkit-keyframes fade-zoom {
   0% {
     -webkit-transform: scale(0);
@@ -418,6 +467,42 @@ a:hover {
             transform: scale(1.1);
   }
   100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes pulsation {
+  0% {
+    background: #00ff00;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    background: #00cc00;
+    -webkit-transform: scale(1.035);
+            transform: scale(1.035);
+  }
+  50% {
+    background: #00ff00;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes pulsation {
+  0% {
+    background: #00ff00;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    background: #00cc00;
+    -webkit-transform: scale(1.035);
+            transform: scale(1.035);
+  }
+  50% {
+    background: #00ff00;
     -webkit-transform: scale(1);
             transform: scale(1);
   }
