Classe extends terminee et fonctionelle avec animation sur image mise en avant

--- a/themes/underscore-enfant/sass/_variable.scss
+++ b/themes/underscore-enfant/sass/_variable.scss
@@ -2,5 +2,7 @@ $couleurFond :#242424;
 $couleurHover :#c3ffa7;
 $couleurVisited :#ffffff;
 $couleurActive :#ffafaf;
+$tuile-bg: #00ff00;
+$couleurBlanche:#edf5e1;
 
 
