--- a/themes/underscore-enfant/sass/_elements.scss
+++ b/themes/underscore-enfant/sass/_elements.scss
@@ -9,7 +9,7 @@ body{
 
 body,a {
 
-	color: #edf5e1;
+	color: $couleurBlanche;
 }
 
 a:visited{
@@ -44,7 +44,7 @@ a:active{
 
 .wrap{
 display: grid;
-grid-template-columns: repeat(3, 1fr);
+grid-template-columns: 1fr 1fr 1fr;
 }
 
 .conteneur {
@@ -68,10 +68,6 @@ grid-template-columns: repeat(3, 1fr);
 	display: none;
 }
 
-img {
-
-	animation: fade-in 4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-}
 
 
 .grilleCss>img {
@@ -90,10 +86,23 @@ img {
 	width: 100%;
 }
 
-
 .flex h4 {
 
 	font-size: 0.6em;
 }
+
+.tuiles {
+	display: flex;
+	width: 100%;
+  }
+
+  .tuile {
+	animation: 1s ease 0s pulsation infinite;
+	background: $tuile-bg;
+	border-radius: 5px;
+	margin: 0 auto;
+	width: 25%;
+	height: 100px;
+  }
 
 
