--- a/themes/underscore-enfant/style.css
+++ b/themes/underscore-enfant/style.css
@@ -52,6 +52,19 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Extends
 --------------------------------------------------------------*/
+.attachment-full, .attachment-full.size-full {
+  -webkit-animation: fade-zoom 3s both;
+          animation: fade-zoom 3s both;
+}
+
+.size-full.attachment-full {
+  cursor: pointer;
+}
+
+.size-full.attachment-full:hover {
+  opacity: 0.5;
+}
+
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
@@ -98,8 +111,8 @@ a:active {
 .wrap {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
 }
 
 .conteneur {
@@ -121,11 +134,6 @@ a:active {
   display: none;
 }
 
-img {
-  -webkit-animation: fade-in 4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-          animation: fade-in 4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-
 .grilleCss > img {
   height: 100vh;
   width: 100%;
@@ -144,6 +152,23 @@ img {
 
 .flex h4 {
   font-size: 0.6em;
+}
+
+.tuiles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.tuile {
+  -webkit-animation: 1s ease 0s pulsation infinite;
+          animation: 1s ease 0s pulsation infinite;
+  background: #00ff00;
+  border-radius: 5px;
+  margin: 0 auto;
+  width: 25%;
+  height: 100px;
 }
 
 /*--------------------------------------------------------------
@@ -410,6 +435,21 @@ a:hover {
   }
 }
 
+.tuile:nth-child(1) {
+  -webkit-animation-delay: 0.33333s;
+          animation-delay: 0.33333s;
+}
+
+.tuile:nth-child(2) {
+  -webkit-animation-delay: 0.66667s;
+          animation-delay: 0.66667s;
+}
+
+.tuile:nth-child(3) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
 @-webkit-keyframes fade-zoom {
   0% {
     -webkit-transform: scale(0);
@@ -440,7 +480,48 @@ a:hover {
   }
 }
 
+@-webkit-keyframes pulsation {
+  0% {
+    background: #00ff00;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    background: #00cc00;
+    -webkit-transform: scale(1.035);
+            transform: scale(1.035);
+  }
+  50% {
+    background: #00ff00;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes pulsation {
+  0% {
+    background: #00ff00;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    background: #00cc00;
+    -webkit-transform: scale(1.035);
+            transform: scale(1.035);
+  }
+  50% {
+    background: #00ff00;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
+.site-info {
+  text-align: center;
+  color: #ebebeb;
+  padding-top: 20px;
+}
 /*# sourceMappingURL=style.css.map */
